<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_inicio"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_citas"
        android:icon="@drawable/ic_calendar_month_foreground"
        android:title="@string/menu_my_appointments"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_button_3"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_button3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_button_4"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_button4"
        app:showAsAction="never" />

</menu>
