<?xml version="1.0" encoding="utf-8"?>
<!-- Este es el contenedor principal de mi pantalla de Detalle de Cita. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleCitaActivity">

    <!-- Uso otro ConstraintLayout dentro para poder organizar el contenido. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toolbarbotones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Este es mi título de la pantalla. -->
        <TextView
            android:id="@+id/tvTituloDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_detalles_cita"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Esta es la etiqueta para el campo de la fecha. -->
        <TextView
            android:id="@+id/tvLabelFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_fecha_cita"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloDetalle" />

        <!-- Aquí es donde muestro el valor de la fecha de la cita que he recuperado. -->
        <TextView
            android:id="@+id/tvValorFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelFecha"
            tools:text="15/07/2024" />

        <!-- Esta es la etiqueta para el campo de la hora. -->
        <TextView
            android:id="@+id/tvLabelHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_hora_cita"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValorFecha" />

        <!-- Aquí es donde muestro el valor de la hora de la cita que he recuperado de la otra pantalla. -->
        <TextView
            android:id="@+id/tvValorHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelHora"
            tools:text="10:15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- la misma Toolbar que uso en las otras pantallas. -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarbotones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.Material3.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>